# ChatBot_Ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  chatbot.db  docker-compose.yml  pyproject.toml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 20260502_0001_create_chat_messages.py  20260502_0002_documents_tasks_webhooks_chat_metrics.py  20260519_0003_llm_integrations.py  20260519_0004_rag_prompt_settings.py
backend/app/: main.py
backend/app/api/: admin.py  admin_login.py  chat.py  documents.py  indexing_tasks.py  llm_integrations.py  rag_prompt.py  system.py
backend/app/core/: admin_auth.py  chat_acl.py  config.py  errors.py  limiter.py  secret_encryption.py
backend/app/db/: metadata.py  session.py
backend/app/integrations/: chroma_store.py
backend/app/models/: chat_message.py  document.py  indexing_task.py  llm_integration.py  rag_prompt_setting.py  webhook_subscription.py
backend/app/observability/: alerts.py  logging.py  metrics.py
backend/app/repositories/: chat_repository.py  ingestion_repository.py  llm_integration_repository.py  rag_prompt_repository.py
backend/app/schemas/: chat.py  ingestion.py  llm_integration.py  rag_prompt.py
backend/app/services/: chat_presenter.py  embedding_factory.py  embeddings.py  fake_embeddings.py  gigachat_auth.py  ingestion_service.py  kb_archive_import.py  kb_index_health.py  llm_bootstrap.py  llm_client.py  llm_factory.py  llm_integration_service.py  llm_models.py  llm_provider_registry.py  rag_answer_extract.py  rag_grounding.py  rag_pipeline.py  rag_prompt_defaults.py  retriever.py  (+4 more)
backend/certs/: README.md  ca-bundle.crt
backend/chatbot_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: backup.ps1  bootstrap.ps1  build_ca_bundle.py  debug_chunks.py  debug_kb_docs.py  debug_pipeline_faq.py  debug_rerank.py  debug_restore_candidates.py  debug_retrieval.py  deploy.ps1  go-live-checklist.ps1  init-env.ps1  list_doc_ids.py  push_mirror_images.ps1  schedule-backup.ps1  smoke.ps1  smoke_gigachat_auth.py  test_faq_chat.py  test_parse.py  verify_faq_live.py
backend/telegram_bot/: Dockerfile  requirements.txt
backend/tests/: conftest.py
(+49 files in other folders)
